<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260718123936 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE review (id INT AUTO_INCREMENT NOT NULL, name VARCHAR(255) NOT NULL, badge VARCHAR(255) DEFAULT NULL, reviews_count INT DEFAULT NULL, photos_count INT DEFAULT NULL, text LONGTEXT NOT NULL, rating INT NOT NULL, date VARCHAR(255) DEFAULT NULL, visit_date VARCHAR(255) DEFAULT NULL, avatar VARCHAR(10) DEFAULT NULL, product VARCHAR(255) DEFAULT NULL, is_visible TINYINT NOT NULL, position INT NOT NULL, PRIMARY KEY (id)) DEFAULT CHARACTER SET utf8mb4');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('DROP TABLE review');
    }
}
