@startuml
title Diagramme de classes - Dubai Dream

class User {
  id : int
  email : string
  roles : array
  password : string
  firstname : string
  lastname : string
}

class Address {
  id : int
  firstname : string
  lastname : string
  address : string
  postcode : string
  city : string
  country : string
  phone : string
}

class Product {
  id : int
  name : string
  slug : string
  description : text
  illustration : string
  price : float
  tva : float
}

class Category {
  id : int
  name : string
  slug : string
}

class Brand {
  id : int
  name : string
  logo : string
}

class Carrier {
  id : int
  name : string
  description : string
  price : float
}

class Order {
  id : int
  createdAt : datetime
  state : int
  carrierName : string
  carrierPrice : float
  delivery : text
}

class OrderDetail {
  id : int
  productName : string
  productIllustration : string
  productQuantity : int
  productPrice : float
  productTVA : float
}

class Wishlist {
  id : int
}

class Review {
  id : int
  name : string
  rating : int
}

class Header {
  id : int
  title : string
}

User "1" --> "0..*" Address : possède
User "1" --> "0..*" Order : passe
User "1" --> "0..*" Wishlist : possède

Order "1" --> "1..*" OrderDetail : contient

Category "1" --> "0..*" Product : contient
Brand "1" --> "0..*" Product : dispose

Wishlist "0..*" -- "0..*" Product : intègre

@enduml